...
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:passwordToggleEnabled="true"
            app:helperText="@string/help_password_helper_text_sign">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_TIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/signIn_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/green_main"
            android:text="@string/sign_in"
...
